added headings for mobile only

--- a/aboutus.html
+++ b/aboutus.html
@@ -105,8 +105,13 @@
   </header>
   <!-- End header section -->
 
+
+
   <section id="story-section">
     <div class="container story-container">
+      <div class="mu-title">
+        <span class="mu-subtitle">About Us</span>
+      </div>       
       <div class="row story-row">
         <div class="col-md-12 img-col">
           <img src="img/extra/counter2.jpg" />
