--- a/contactus.html
+++ b/contactus.html
@@ -137,11 +137,11 @@ var hourofday = date.getHours();
       <div class="container">
 
       <!-- Page Heading/Breadcrumbs -->
-<!--       <div class="mu-title">
+      <div class="mu-title">
         <span class="mu-subtitle">
           Contact Us
         </span>
-      </div> -->
+      </div>
 
       <!-- Content Row -->
       <div class="row">
