--- a/faqs.html
+++ b/faqs.html
@@ -110,10 +110,10 @@
     <div class="container page-container">
 
       <!-- Page Heading/Breadcrumbs -->
-<!--       <div class="mu-title">
+      <div class="mu-title">
         <span class="mu-faq">FAQs</span>
       </div>
- -->
+
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
