--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
   <title>-21&#176;C Snowflake | Menu</title>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="img/logo2.png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/extra/logo2.png" type="image/x-icon">
 
   <!-- Font awesome -->
   <link href="assets/css/font-awesome.css" rel="stylesheet">
@@ -101,8 +101,15 @@
   <!-- End header section -->
 
 
+
   <section id="snowflake-section">
+
     <div class="container menupage-container">
+
+          <div class="mu-title1">
+        <span class="mu-menu">Menu</span>
+      </div>      
+
       <div class="row menupage-row">
         <div class="col-sm-12" style="padding: 0;">
           <div class="mu-restaurant-menu-area">
