--- a/teamenu.html
+++ b/teamenu.html
@@ -60,6 +60,9 @@
   <header id="mu-header">
     <nav class="navbar navbar-default mu-main-navbar" role="navigation">
       <div class="container nav-container">
+                  <div class="mu-title1">
+        <span class="mu-menu">Menu</span>
+      </div>      
         <div class="navbar-header">
           <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
