--- a/toastmenu.html
+++ b/toastmenu.html
@@ -105,6 +105,9 @@
 
   <section id="snowflake-section">
     <div class="container menupage-container">
+                <div class="mu-title1">
+        <span class="mu-menu">Menu</span>
+      </div>      
       <div class="row menupage-row">
         <div class="col-sm-12" style="padding: 0;">
           <div class="mu-restaurant-menu-area">
